메인 페이지 제목 수정

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Vite로 환경 구성하고 Netlify로 배포하기</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
